--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: minima
-title: First page
+title: ACE-debuging's personal blog
+description: This is where I share cool stuff about my life
+author: ACE-debuging
